<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ETA</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="create_trip">Create</string>
    <string name="view_trip">View</string>
    <string name="activate_trip">Activate</string>

    <string name="trip_name">Trip name:</string>
    <string name="trip_description">Description:</string>
    <string name="trip_date">Date:</string>
    <string name="trip_time">Time:</string>
    <string name="trip_location">Location:</string>
    <string name="trip_friend">Friends:</string>
    <string name="trip_commit">Commit</string>
    <string name="trip_drop">Drop</string>
    <string name="select_date">Select Date</string>

    <string name="back">Back</string>
    <string name="addFriend">Add Friend</string>
    <string name="searchLocation">Search</string>

    <string name="present_trip">Present Trip</string>
    <string name="future_trip">Future Trip</string>
    <string name="past_trip">Past Trip</string>

    <string name="item_name">Trip Name</string>
    <string name="item_date">Trip Date</string>

    <string name="start_trip">Start</string>
    <string name="stop_trip">Stop</string>
</resources>
