<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.nyu.cs9033.eta.controllers.CreateTripActivity">

    <LinearLayout
        android:id="@+id/footerBtn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center">

        <Button
            android:id="@+id/commit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#ff00ddff"
            android:clickable="false"
            android:text="@string/trip_commit"
            android:textSize="15sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/drop"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#ff0099cc"
            android:clickable="false"
            android:text="@string/trip_drop"
            android:textSize="15sp"
            android:textStyle="bold" />
    </LinearLayout>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/footerBtn">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="15dp"
                android:text="@string/trip_name"
                android:textColor="#4354ff"
                android:textSize="20sp"
                android:textStyle="italic" />

            <EditText
                android:id="@+id/tripName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:inputType="text" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="15dp"
                android:text="@string/trip_description"
                android:textColor="#4354ff"
                android:textSize="20sp"
                android:textStyle="italic" />

            <EditText
                android:id="@+id/tripDescription"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:ems="12"
                android:inputType="text" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="15dp"
                android:text="@string/trip_date"
                android:textColor="#4354ff"
                android:textSize="20sp"
                android:textStyle="italic" />

            <Button
                android:id="@+id/selectDateButton"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="15dp"
                android:text="@string/select_date"
                android:background="#44ccff" />


            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="15dp"
                android:text="@string/trip_time"
                android:textColor="#4354ff"
                android:textSize="20sp"
                android:textStyle="italic" />

            <EditText
                android:id="@+id/tripTime"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:ems="12"
                android:inputType="text" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="15dp"
                android:text="@string/trip_location"
                android:textColor="#4354ff"
                android:textSize="20sp"
                android:textStyle="italic" />

            <EditText
                android:id="@+id/searchArea"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:ems="12"
                android:inputType="text"
                android:hint="search Area" />

            <EditText
                android:id="@+id/searchItem"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:ems="12"
                android:inputType="text"
                android:hint="search Item"/>

            <Button
                android:id="@+id/searchButton"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:text="@string/searchLocation"
                android:background="#44ccff"
                android:enabled="false"/>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="15dp"
                android:text="@string/trip_friend"
                android:textColor="#4354ff"
                android:textIsSelectable="false"
                android:textSize="20sp"
                android:textStyle="italic" />

            <Button
                android:id="@+id/addFriendButton"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="15dp"
                android:text= "@string/addFriend"
                android:background="#44ccff"/>
        </LinearLayout>

    </ScrollView>
</RelativeLayout>
